# docverify

./: .env.example  .gitignore  BRIEF.md  BUG_HUNT_CHANGELOG.md  BUG_HUNT_REPORT.md  CONTRACT_CHANGE_REQUESTS.md  DOCVERIFY_CHANGES_SUMMARY.md  FINDINGS.md  README.md  SECURITY_AUDIT.md  SIMPLICITY_REVIEW.md  TECHNICAL_DOC.md  UI_REBUILD_PROMPT.md  demo.html  pyproject.toml  requirements.txt
.git_backup/: COMMIT_EDITMSG  index
.git_backup/logs/: HEAD
.git_backup/refs/heads/: master
docverify/: QA_REPORT.md  pipeline.py  utils.py
docverify/agents/: __init__.py  generator.py  personas.py  simulator.py
docverify/email/: __init__.py  inbox.py  sender.py
docverify/extraction/: extract.py  llm_fallback.py  synonyms.py
docverify/feedback/: __init__.py  dashboard.py  retrain.py  tracker.py  tuner.py
docverify/ingestion/: ingest.py
docverify/llm/: __init__.py  anthropic_client.py  gemini_client.py  ollama_client.py  router.py
docverify/matching/: match.py
docverify/reporting/: report.py
docverify/schemas/: models.py
docverify/scoring/: score.py
docverify/verification/: verify.py
docverify/web/: __init__.py  __main__.py  api.py  app.py
docverify/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_edge_cases.py  test_email.py  test_extraction.py  test_ingestion.py  test_integration.py  test_llm_router.py  test_malformed_docs.py  test_matching.py  test_pipeline.py  test_reporting.py  test_utils.py  test_verification.py
tests/fixtures/: sample_invoice.xlsx  sample_legacy.docx  sample_modern.docx
